--- a/paper/noisy_kids.bib
+++ b/paper/noisy_kids.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Dan Yurovsky at 2015-09-30 11:45:35 -0700 
+%% Created for Dan Yurovsky at 2015-10-01 09:56:43 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -171,8 +171,8 @@
 @article{jacobs1999,
 	Author = {Jacobs, R A},
 	Date-Added = {2015-09-18 19:38:26 +0000},
-	Date-Modified = {2015-09-28 22:09:39 +0000},
-	Journal = {Vision research},
+	Date-Modified = {2015-10-01 16:56:41 +0000},
+	Journal = {Vision Research},
 	Pages = {3621--3629},
 	Title = {{Optimal integration of texture and motion cues to depth}},
 	Volume = {39},
@@ -253,10 +253,10 @@
 @article{shannon1948,
 	Author = {Shannon, Claude E},
 	Date-Added = {2015-09-17 18:59:41 +0000},
-	Date-Modified = {2015-09-28 22:14:37 +0000},
+	Date-Modified = {2015-10-01 16:49:34 +0000},
 	Journal = {The Bell Systems Technical Journal},
 	Pages = {379--423},
-	Title = {{A mathematical theory of cummunication}},
+	Title = {{A mathematical theory of communication}},
 	Volume = {XXVII},
 	Year = {1948}}
 
