--- a/paper/noisy_kids.tex
+++ b/paper/noisy_kids.tex
@@ -42,14 +42,13 @@ Email: yurovsky@stanford.edu
 \begin{document}
 \maketitle
 
-Imagine Bob hears Alice say ``I had carrots and bees for dinner.'' Perhaps she visited an exotic restaurant, and he should follow up and ask how they tasted. Or perhaps he misheard her or she misspoke, and she actually ate \emph{peas}. To interpret Alice's utterance, Bob has to integrate perceptual information from her speech with his expectations about what words usually go with ``carrots'' and ``dinner'' and what foods people usually eat. Modern statistical language processing systems operate using a body of theory based on this idea---that language is a \emph{noisy channel}, and that Bob can correct for perceptual errors using linguistic expectations about what Alice was likely trying to say \cite{jelinek1976, shannon1948}. 
+Imagine Bob hears Alice say ``I had carrots and bees for dinner.'' Perhaps she visited an exotic restaurant, and he should ask how they tasted. Or perhaps he misheard her or she misspoke---she actually ate \emph{peas}. To interpret Alice's utterance, Bob has to integrate perceptual information from her speech with his expectations about what words usually go with ``carrots'' and ``dinner'' and what foods people usually eat. Modern statistical language processing systems use a body of theory based on this idea---that language is a \emph{noisy channel}, and that Bob can correct for perceptual errors using linguistic expectations about what Alice was likely trying to say \cite{jelinek1976, shannon1948}. 
 
-Noisy channel principles provide a powerful framework for explaining how the human language processing system operates in complex and uncertain real-time communicative situations \cite{clayards2008, levy2008, jaeger2010, kleinschmidt2015}. On this view of language, comprehenders integrate prior expectations with perceptual data; and they do so probabilistically, weighting each according to its reliability \cite{ernst2002, jacobs1999}. In one demonstration of such integration, \citeA{gibson2013} presented participants with semantically implausible sentences (e.g., ``The mother gave the candle the daughter''), which could have been produced by small typographical errors in otherwise much more plausible sentences (``The mother gave the candle \emph{to} the daughter''). Adult comprehenders were able to correct these errors, and critically corrected them at higher rates when they had reason to believe that the communicative channel was noisy (and hence the perceptual signal was unreliable). Conversely, they corrected these errors at lower rates when they believed they were in a ``silly'' context where many of the sentences they read were similarly implausible. Together, these results suggested a flexible weighting of information from the perceptual signal and from speaker expectations. 
+Noisy channel principles provide a powerful framework for explaining how people process language in complex and uncertain real-time communicative situations \cite{clayards2008, levy2008, jaeger2010, kleinschmidt2015}. On this view of language, comprehenders integrate prior expectations with perceptual data; and they do so probabilistically, weighting each according to its reliability \cite{ernst2002, jacobs1999}. In one demonstration of such integration, \citeA{gibson2013} presented participants with semantically implausible sentences (e.g., ``The mother gave the candle the daughter''), which could have been produced by small typographical errors in otherwise much more plausible sentences (``The mother gave the candle \emph{to} the daughter''). Adult comprehenders were able to correct these errors, and critically corrected them at higher rates when they thought the communicative channel was noisy (and hence the perceptual signal was unreliable). Conversely, adults corrected these errors at lower rates when they thought they were in a ``silly'' context where many other sentences they read were similarly implausible. These results suggested that adults flexibly weigh information from the perceptual signal and from speaker expectations.
 
-\pagebreak
-Do children also process language in the same flexible, expectation-based way? We know that infants and toddlers already make use of speakers' social and pragmatic cues to determine their intended referent in otherwise ambiguous situations \cite{carpenter1998, clark2009}. We also know that children make use of acoustic cues like speaker identity and linguistic cues like grammatical gender \cite{lew-williams2007, creel2012}. However, these successes have been shown only when all cues point to the same meaning, not when they disagree. In fact, children sometimes show striking deficits in revising incorrect expectations about meaning in cases where syntax and context compete \cite{trueswell1999}. However, these failures occur in complex contexts designed to test the development of other abilities. Thus, the question remains unanswered. Our current experiments test adaptive, expectation-based integration in the absence of other processing demands. 
+Do children also process language in the same flexible, expectation-based way? We know that children use speakers' social and pragmatic cues to determine their intended referent in otherwise ambiguous situations \cite{carpenter1998, clark2009}. We also know that children  use acoustic cues like speaker identity and linguistic cues like grammatical gender \cite{lew-williams2007, creel2012}. However, these successes have been shown only when all cues point to the same meaning, not when they disagree. In fact, children sometimes show striking deficits in revising incorrect expectations about meaning in cases where syntax and context compete \cite{trueswell1999}. But because these failures occur in complex contexts designed to test the development of other abilities, the question remains unanswered. Our current experiments test adaptive, expectation-based integration in the absence of other processing demands. 
 
-We created a paradigm to independently manipulate both expectations about speaker plausibility and perceptual noise. We introduced four- and five-year-old children (and, as a control group, adults) to either a plausible or implausible speaker who initially uttered unambiguously different sentences like ``my cat has three little [kittens/hammers]'' (Figure \ref{fig:exposure}). We then asked participants to resolve the intended meaning for ambiguous sentences like the ``bees/peas'' example above, which could either be the product of a mishearing or phonological error, or could convey implausible content (Figure \ref{fig:test}). We predicted that, if children integrate speaker expectations and channel noise, their interpretations should be a product of both of these. In Experiment 1, we provide a first test of this hypothesis by manipulating speaker plausibility. In Experiment 2, we replicate Experiment 1, and cross speaker plausiblity with a manipulation of channel noise. The results of these experiments show that children, like adults, flexibly trade off between information sources in language comprehension in response to their reliability.
+We created a paradigm to independently manipulate both expectations about speaker plausibility and perceptual noise. We introduced four- and five-year-old children (and, as a control group, adults) to either a Plausible or Implausible Speaker who initially uttered unambiguously different sentences like ``my cat has three little [kittens/hammers]'' (Figure \ref{fig:exposure}). Participants were then asked to resolve the intended meaning for ambiguous sentences like the ``bees/peas'' example above, which could either be the product of a perceptual error, or could convey implausible content (Figure \ref{fig:test}). If children integrate speaker expectations and channel noise, their interpretations should be a product of both. In Experiment 1, we provide a first test of this hypothesis by manipulating speaker plausibility. In Experiment 2, we replicate Experiment 1, and cross speaker plausibility with a manipulation of channel noise. The results of these experiments show that children, like adults, flexibly trade off between information sources in language comprehension in response to their reliability.
 
 \begin{figure}[tb]
      \centering
@@ -77,11 +76,11 @@ Children were recruited at the Bing Nursery School on Stanford's campus. Each ch
 
 \subsubsection{Stimuli, Design, and Procedure}
 
-Experiment 1 consisted of a series of trials on which participants saw two pictures and heard a sentence referring to one of them.\footnote{All stimuli, data, and analyses are available in a public repository at \small{\tt{http://github.com/dyurovsky/noisy-kids}}.} Pictures were constructed from clipart freely available on the internet, and audio was recorded by a female native speaker of English. In order to increase the ambiguity of the spoken utterances, and thus give us more power to detect error-correction, all of the audio recordings were convolved with a small amount of Brown noise.
+Experiment 1 consisted of a series of trials on which participants saw two pictures and heard a sentence referring to one of them. Pictures were constructed from clipart freely available on the internet, and audio was recorded by a female native speaker of English. In order to increase the ambiguity of the spoken utterances, and thus give us more power to detect error-correction, all of the audio recordings were convolved with a small amount of Brown noise.
 
 Each trial contained one semantically plausible picture and one semantically implausible picture. On Exposure trials, these pictures and their corresponding referring expressions were highly distinct (Figure~\ref{fig:exposure}). In contrast, on Test trials the two pictures corresponded to referring expressions that were only one consonant or vowel apart (Figure~\ref{fig:test}). Each participant saw eight Exposure trials, followed by seven Test trials. The order of these trials within each of these two blocks was randomized across participants, as was the on-screen position of the two pictures on each trial. For participants in the Plausible Speaker condition, the speaker referred to the plausible referent on each of the eight Exposure trials. In contrast, for participants in the Implausible Speaker condition, the speaker referred to the implausible referent on each Exposure trial. In both conditions, the speaker referred to the implausible referent on all seven Test trials.
 
-For all participants, the experiment began with a short introduction to Katie, the speaker who would be referring to pictures for the remainder of the task. After this introduction, participants completed the remaining trials, responding either with the mouse (adults), or by touching one of the pictures on an iPad (children). Adults were instructed by a series of written prompts; children were given instructions by a live experimenter.\footnote{For 3 children, a software bug meant that responses were not tracked automatically and were post-coded from videotapes.}
+For all participants, the experiment began with a short introduction to Katie, the speaker who would be referring to pictures for the remainder of the task. After this introduction, participants completed the remaining trials, responding either with the mouse (adults), or by touching one of the pictures on an iPad (children). Adults were instructed by a series of written prompts; children were given instructions by a live experimenter. Three children's responses were coded from video due to a software error. All stimuli, data, and analyses are available at \small{\tt{http://github.com/dyurovsky/noisy-kids}}.
 
 \subsection{Results}
 
@@ -136,18 +135,18 @@ Finally, one alternative explanation for the difference between Speaker conditio
 
 \section{General Discussion}
 
-When we use language to communicate, we are doing more than processing the sounds we hear; we are trying to infer the speaker's intended meaning \cite{clark1996}. Because of the noise and ambiguity inherent in linguistic communication, our expectations about what speakers are likely to say play an important role in resolving interpretive ambiguities \cite{grice1975, frank2012}. But how much should listeners rely on the acoustic signal and how much should they rely on their expectations? Ideal observer models of this kind of cue integration predict that each cue should be weighted in proportion to its reliability \cite{jacobs1999, ernst2002}. This prediction is borne out in adult listeners across domains in language processing from phonology to syntax \cite<e.g.,>{gibson2013, mcclelland2006, kleinschmidt2015}. The experiments in this paper provide evidence that this adaptive expectation-based language processing is already available to 4--5 year old children. Not only do preschoolers combine their expectations about a speaker's likely utterance with the speech they are hearing, they flexibly re-weigh their reliance on each as they develop stronger expectations about the speaker and as the speech signal changes in clarity.
+When we use language to communicate, we are doing more than processing the sounds we hear; we are trying to infer the speaker's intended meaning \cite{clark1996}. Because of the noise inherent in linguistic communication, our expectations about what speakers are likely to say play an important role in resolving interpretive ambiguities \cite{grice1975, frank2012}. But how much should listeners rely on the acoustic signal and how much should they rely on their expectations? Ideal observer models of cue integration predict that each cue should be weighted in proportion to its reliability \cite{jacobs1999, ernst2002}. This prediction holds for adult listeners across levels in language processing from phonology to syntax \cite<e.g.,>{gibson2013, mcclelland2006, kleinschmidt2015}.Our experiments paper provide evidence that adaptive expectation-based language processing is already available to 4--5-year-old children. Not only do preschoolers combine their expectations about a speaker's likely utterance with the speech they are hearing, they flexibly re-weigh each as they develop stronger expectations about the speaker and as the speech signal changes in clarity.
 
-While the size of the adaptation effect was nearly identical in both children and adults, their baseline reliance on perceptual vs. linguistic cues was not. Children relied relatively more on their top-down expectations. Because of the greater noise inherent in young children's perceptual processing systems, the same acoustic stimulus may effectively be less reliable for children than adults \cite{neuman1983, lyons2011}. Relatedly, the noisy channel framework makes a clear prediction about integration in atypical populations: Children whose acoustic processing is impaired (e.g., with cochlear implants) should rely relatively more on their expectations, whereas children with impaired higher-level linguistic expectations (e.g., children with specific language impairment) should rely more the acoustic signal.
+Children adjusted their reliance on expectations to the same degree as adults, but also relied relatively more on their top-down expectations in general. Because of the greater noise inherent in young children's perceptual processing systems, the same acoustic stimulus may effectively be less reliable for children than adults  \cite{neuman1983, lyons2011}. We can thus make a clear prediction about integration in atypical populations: Children whose acoustic processing is impaired (e.g., with cochlear implants) should rely relatively more on their expectations, whereas children with impaired higher-level linguistic expectations (e.g., children with specific language impairment) should rely more on the acoustic signal.
 
 % One puzzle of the broader literature on the development of language comprehension is that children appear to integrate information in an adult-like way in some language processing tasks but not others. A priori, we would predict that children's use of higher-level expectations should be relative to the reliability of their model of the relevant domain. Thus, children should---and do---integrate expectations when the relevant models are over speech sounds, speakers, or semantic plausibility \cite<e.g.,>{clark2009, creel2012, harris2012}. On the other hand, children tend to fail in cases where the relevant models include difficult linguistic content like quantifier semantics or complex syntactic constructions \cite<e.g.,>{trueswell1999, noveck2001}. 
 % However, based on prior evidence that children's understanding of quantifiers is limited, as is their exposure to relative clauses, this is exactly the result a noisy channel framework for speech processing would predict  \cite{barner2011, montag2015}.
 
-Our work suggests that the noisy channel framework offers a route to understanding both children's and adults' language processing, as well as how one develops from the other. Within this framework, processing is characterized by the interaction between two models: one of perception, and one of expectation. The content and level of description for these models are outstanding questions, however. One possibility is that expectations are fundamentally about speakers, and that linguistic communication is pragmatic all the way down. Alternatively, these models could be linguistic in content, about the distributions of words, referents, and their mutual predictability. We hope that our paradigm will be a helpful tool for resolving this fundamental tension. 
+The noisy channel framework thus offers a route to understanding children's language processing, as well as its development. Within this framework, processing is characterized by the interaction of two models: one of perception, and one of expectation. The content of these models, however, is an outstanding question. One possibility is that expectations are fundamentally about speakers, and that linguistic communication is pragmatic all the way down. Alternatively, these models could be linguistic in content, about the distributions of words, referents, and their mutual predictability. We hope our paradigm will be a tool for resolving this fundamental tension.
 
 \section{Acknowledgments}
 
-Thanks to Nicolette Castro for data collection. This work was supported by NIH NRSA F32HD075577 to DY and a John Merck Scholars Fellowship to MCF.
+We thank Nicolette Castro for data collection, NIH NRSA F32HD075577 to DY and a John Merck Scholars Fellowship to MCF.
 
 \bibliographystyle{apacite}
 \bibliography{noisy_kids}
