more changes for submission formatting

--- a/paper/noisy_kids.tex
+++ b/paper/noisy_kids.tex
@@ -44,11 +44,11 @@ Email: yurovsky@stanford.edu
 
 Imagine Bob hears Alice say ``I had carrots and bees for dinner.'' Perhaps she visited an exotic restaurant, and he should ask how they tasted. Or perhaps he misheard her or she misspoke---she actually ate \emph{peas}. To interpret Alice's utterance, Bob has to integrate perceptual information from her speech with his expectations about what words usually go with ``carrots'' and ``dinner'' and what foods people usually eat. Modern statistical language processing systems use a body of theory based on this idea---that language is a \emph{noisy channel}, and that Bob can correct for perceptual errors using linguistic expectations about what Alice was likely trying to say \cite{jelinek1976, shannon1948}. 
 
-Noisy channel principles provide a powerful framework for explaining how people process language in complex and uncertain real-time communicative situations \cite{clayards2008, levy2008, jaeger2010, kleinschmidt2015}. On this view of language, comprehenders integrate prior expectations with perceptual data; and they do so probabilistically, weighting each according to its reliability \cite{ernst2002, jacobs1999}. In one demonstration of such integration, \citeA{gibson2013} presented participants with semantically implausible sentences (e.g., ``The mother gave the candle the daughter''), which could have been produced by small typographical errors in otherwise much more plausible sentences (``The mother gave the candle \emph{to} the daughter''). Adult comprehenders were able to correct these errors, and critically corrected them at higher rates when they thought the communicative channel was noisy (and hence the perceptual signal was unreliable). Conversely, adults corrected these errors at lower rates when they thought they were in a ``silly'' context where many other sentences they read were similarly implausible. These results suggested that adults flexibly weigh information from the perceptual signal and from speaker expectations.
+Noisy channel principles provide a powerful framework for explaining how people process language in complex and uncertain real-time communicative situations \cite{clayards2008, levy2008, jaeger2010, kleinschmidt2015}. On this view of language, comprehenders integrate prior expectations with perceptual data; and they do so probabilistically, weighting each according to its reliability \cite{ernst2002, jacobs1999}. In one demonstration of such integration, \citeA{gibson2013} presented participants with semantically implausible sentences (e.g., ``The mother gave the candle the daughter''), which could have been produced by small typographical errors in otherwise much more plausible sentences (``The mother gave the candle \emph{to} the daughter''). Adult comprehenders were able to correct these errors, and critically corrected them more often when they thought the communicative channel was noisy (and hence the perceptual signal was unreliable). Conversely, adults corrected these errors less often when they thought they were in a ``silly'' context where many other sentences were similarly implausible. These results suggested that adults flexibly weigh information from the perceptual signal and from speaker expectations.
 
 Do children also process language in the same flexible, expectation-based way? We know that children use speakers' social and pragmatic cues to determine their intended referent in otherwise ambiguous situations \cite{carpenter1998, clark2009}. We also know that children  use acoustic cues like speaker identity and linguistic cues like grammatical gender \cite{lew-williams2007, creel2012}. However, these successes have been shown only when all cues point to the same meaning, not when they disagree. In fact, children sometimes show striking deficits in revising incorrect expectations about meaning in cases where syntax and context compete \cite{trueswell1999}. But because these failures occur in complex contexts designed to test the development of other abilities, the question remains unanswered. Our current experiments test adaptive, expectation-based integration in the absence of other processing demands. 
 
-We created a paradigm to independently manipulate both expectations about speaker plausibility and perceptual noise. We introduced four- and five-year-old children (and, as a control group, adults) to either a Plausible or Implausible Speaker who initially uttered unambiguously different sentences like ``my cat has three little [kittens/hammers]'' (Figure \ref{fig:exposure}). Participants were then asked to resolve the intended meaning for ambiguous sentences like the ``bees/peas'' example above, which could either be the product of a perceptual error, or could convey implausible content (Figure \ref{fig:test}). If children integrate speaker expectations and channel noise, their interpretations should be a product of both. In Experiment 1, we provide a first test of this hypothesis by manipulating speaker plausibility. In Experiment 2, we replicate Experiment 1, and cross speaker plausibility with a manipulation of channel noise. The results of these experiments show that children, like adults, flexibly trade off between information sources in language comprehension in response to their reliability.
+We created a paradigm to independently manipulate expectations about speaker plausibility and perceptual noise. We introduced preschoolers (and, as a control group, adults) to either a Plausible or Implausible Speaker who initially uttered unambiguously different sentences like ``my cat has three little [kittens/hammers]'' (Figure \ref{fig:exposure}). Participants were then asked to resolve the intended meaning for ambiguous sentences like the ``bees/peas'' example above, which could either be the product of a perceptual error, or could convey implausible content (Figure \ref{fig:test}). If children integrate speaker expectations and channel noise, their interpretations should be a product of both. In Experiment 1, we first test this hypothesis by manipulating speaker plausibility. In Experiment 2, we replicate Experiment 1, and cross speaker plausibility with a manipulation of channel noise. The results of these experiments show that children, like adults, flexibly trade off between information sources in language comprehension in response to their reliability.
 
 \begin{figure}[tb]
      \centering
@@ -70,9 +70,9 @@ We created a paradigm to independently manipulate both expectations about speake
 \subsection{Method}
 \subsubsection{Participants}
 
-Adult participants for Experiment 1 were recruited through Amazon Mechanical Turk. We posted 50 Human Intelligence Tasks (HITs) to be completed only by participants with US IP addresses that each paid 30 cents. A total of 50 HITs were posted, with Speaker condition assigned randomly to each participant.
+Children were recruited at the Bing Nursery School on Stanford's campus. Each child was asked if they would be willing to play a game with the experimenter, and informed that they could stop playing at any time. Children were randomly assigned to speaker conditions, and we collected data until there were at least 20 participants in each condition (similar to other psycholinguistic studies of children \citeNP<e.g.>{trueswell1999, creel2012}). Data from a total of 43 children were collected; children were all between 4 and 6 years old, and approximately half were female. Neither age nor sex distribution varied significantly across conditions (Plausible: 23 children (12 girls), Mean age = 4.6 years (range = 4.0--5.3 years), Implausible: 20 children (10 girls), Mean age = 4.7 years (range = 4.1--5.4 years)).
 
-Children were recruited at the Bing Nursery School on Stanford's campus. Each child was asked if they would be willing to play a game with the experimenter, and informed that they could stop playing at any time. Children were randomly assigned to speaker conditions, and we collected data until there were at least 20 participants in each condition. Data from a total of 43 children were collected; children were all between 4 and 6 years old, and approximately half were female. Neither age nor sex distribution varied significantly across conditions (Plausible: 23 children (12 girls), Mean age = 4.6 years (range = 4.0--5.3 years), Implausible: 20 children (10 girls), Mean age = 4.7 years (range = 4.1--5.4 years)).
+Adult participants were recruited through Amazon Mechanical Turk. We posted 50 Human Intelligence Tasks (HITs) to be completed only by participants with US IP addresses that each paid 30 cents. A total of 50 HITs were posted, with Speaker condition assigned randomly to each participant. Fifty was chosen on the basis of the effect size in the child data.
 
 \subsubsection{Stimuli, Design, and Procedure}
 
@@ -101,9 +101,7 @@ When children and adults were exposed to a speaker who was likely to produce sem
 
 \section{Experiment 2}
 
-Experiment 1 shows that children, to the same degree as adults, flexibly adapt their on-line language processing in accord with their expectations about what a speaker is likely to say. In Experiment 2, we replicate this finding and also test a further prediction of the noisy channel framework for language processing: children should adapt to the reliability of the acoustic signal. As speech becomes noisier, and thus harder to hear, listeners should rely more on their expectations. 
-
-In addition, because all of the Test trials asked the listener to select the semantically implausible referent, it is possible that exposure to an Implausible speaker induced listeners to select the implausible referent at test generally, independent of their acoustic input.  In Experiment 2, we provide a Control condition in which the Implausible speaker from training asked for the semantically plausible referent at test. If children inferred from the unambiguous Exposure trials that the goal of the game was to pick the ``silly'' referent, they should have continued to select the implausible referent on Test trials. In contrast, if Exposure trials caused them to adjust the relative weights on acoustic information and linguistic expectations, they should instead have selected the plausible referent at test.
+Experiment 2 replicates Experiment 1 and tests a second prediction of noisy channel processing: As speech becomes noisier, children should rely more on their expectations.
 
 \subsection{Method}
 
@@ -114,6 +112,8 @@ For Experiment 2, children were recruited from the floor of the San Jose Childre
 \subsubsection{Stimuli, Design, \& Procedure}
 
 Stimuli were constructed as in Experiment 1 with a few small changes. First, one additional Test trial was added to increase power. Second, two versions of each acoustic recording were made. One was recorded in a sound-proof room by a female native English speaker. The second was constructed by convolving each recording with randomly generated Brown noise with an amplitude of .7. The first was used in the No Noise conditions, the second was used to replicate the two conditions from Experiment 1 as well as for the Control condition.
+
+In addition, because all of the Test trials asked the listener to select the semantically implausible referent, it is possible that exposure to an Implausible speaker induced listeners to select the implausible referent at test generally, independent of their acoustic input.  In Experiment 2, we provide a Control condition in which the Implausible speaker from training asked for the semantically plausible referent at test. If children inferred from the unambiguous Exposure trials that the goal of the game was to pick the ``silly'' referent, they should have continued to select the implausible referent on Test trials. In contrast, if Exposure trials caused them to adjust the relative weights on acoustic information and linguistic expectations, they should instead have selected the plausible referent at test.
 
 \subsection{Results}
 
@@ -135,18 +135,18 @@ Finally, one alternative explanation for the difference between Speaker conditio
 
 \section{General Discussion}
 
-When we use language to communicate, we are doing more than processing the sounds we hear; we are trying to infer the speaker's intended meaning \cite{clark1996}. Because of the noise inherent in linguistic communication, our expectations about what speakers are likely to say play an important role in resolving interpretive ambiguities \cite{grice1975, frank2012}. But how much should listeners rely on the acoustic signal and how much should they rely on their expectations? Ideal observer models of cue integration predict that each cue should be weighted in proportion to its reliability \cite{jacobs1999, ernst2002}. This prediction holds for adult listeners across levels in language processing from phonology to syntax \cite<e.g.,>{gibson2013, mcclelland2006, kleinschmidt2015}.Our experiments paper provide evidence that adaptive expectation-based language processing is already available to 4--5-year-old children. Not only do preschoolers combine their expectations about a speaker's likely utterance with the speech they are hearing, they flexibly re-weigh each as they develop stronger expectations about the speaker and as the speech signal changes in clarity.
+When we use language to communicate, we are doing more than processing the sounds we hear; we are trying to infer the speaker's intended meaning \cite{clark1996}. Because linguistic communication is inherently noisy, our expectations about what speakers are likely to say play an important role in resolving interpretive ambiguities \cite{grice1975, frank2012}. But how much should listeners rely on the acoustic signal and how much should they rely on their expectations? Ideal observer models of cue integration predict that each cue should be weighted in proportion to its reliability \cite{jacobs1999, ernst2002}. This prediction holds for adult listeners across levels in language processing from phonology to syntax \cite<e.g.,>{gibson2013, mcclelland2006, kleinschmidt2015}.Our experiments paper provide evidence that adaptive expectation-based language processing is already available to 4--5-year-old children. Not only do preschoolers combine their expectations about a speaker's likely utterance with the speech they are hearing, they flexibly re-weigh each as they develop stronger expectations about the speaker and as the speech signal changes in clarity.
 
-Children adjusted their reliance on expectations to the same degree as adults, but also relied relatively more on their top-down expectations in general. Because of the greater noise inherent in young children's perceptual processing systems, the same acoustic stimulus may effectively be less reliable for children than adults  \cite{neuman1983, lyons2011}. We can thus make a clear prediction about integration in atypical populations: Children whose acoustic processing is impaired (e.g., with cochlear implants) should rely relatively more on their expectations, whereas children with impaired higher-level linguistic expectations (e.g., children with specific language impairment) should rely more on the acoustic signal.
+Children adjusted their reliance on expectations as much as adults, but also relied relatively more on top-down expectations in general. Because of the greater noise inherent in children's perceptual processing systems, the same acoustic stimulus may effectively be less reliable for children than adults  \cite{neuman1983, lyons2011}. We can thus make a prediction about integration in atypical populations: Children with impaired acoustic processing (e.g., with cochlear implants) should rely relatively more on their expectations, whereas children with impaired higher-level linguistic expectations (e.g., children with specific language impairment) should rely more on the acoustic signal.
 
 % One puzzle of the broader literature on the development of language comprehension is that children appear to integrate information in an adult-like way in some language processing tasks but not others. A priori, we would predict that children's use of higher-level expectations should be relative to the reliability of their model of the relevant domain. Thus, children should---and do---integrate expectations when the relevant models are over speech sounds, speakers, or semantic plausibility \cite<e.g.,>{clark2009, creel2012, harris2012}. On the other hand, children tend to fail in cases where the relevant models include difficult linguistic content like quantifier semantics or complex syntactic constructions \cite<e.g.,>{trueswell1999, noveck2001}. 
 % However, based on prior evidence that children's understanding of quantifiers is limited, as is their exposure to relative clauses, this is exactly the result a noisy channel framework for speech processing would predict  \cite{barner2011, montag2015}.
 
-The noisy channel framework thus offers a route to understanding children's language processing, as well as its development. Within this framework, processing is characterized by the interaction of two models: one of perception, and one of expectation. The content of these models, however, is an outstanding question. One possibility is that expectations are fundamentally about speakers, and that linguistic communication is pragmatic all the way down. Alternatively, these models could be linguistic in content, about the distributions of words, referents, and their mutual predictability. We hope our paradigm will be a tool for resolving this fundamental tension.
+Noisy channel principles provide a framework for understanding language processing in both adults and children. Within this framework, processing is characterized by the interaction of two models: one of perception, and one of expectation. What is the content of these models? One possibility is that they are models of speakers; that linguistic communication is pragmatic all the way down. Alternatively, these models could be linguistic in content, about the distributions of words, referents, and their mutual predictability. We hope our paradigm will be a tool for resolving this fundamental tension.
 
 \section{Acknowledgments}
 
-We thank Nicolette Castro for data collection, NIH NRSA F32HD075577 to DY and a John Merck Scholars Fellowship to MCF.
+We thank Nicolette Castro, NIH NRSA F32HD075577 to DY, and a John Merck Scholars Fellowship to MCF.
 
 \bibliographystyle{apacite}
 \bibliography{noisy_kids}
